@@ -13,6 +13,7 @@ Revision history for SPVM
         * SPVM::Builder::CC->compile don't depend on Perl compiled environment.
         * add SPVM_DEBUG_CC enviroment variable to print SVPM::Builder::CC compile and link outputs to stderr.
         * Remove get_cccdlflags, set_cccdlflags, append_cccdlflags, prepend_cccdlflags of SPVM::Builder::Config
+        * Remove get_archlibexp, set_archlibexp of SPVM::Builder::Config
 0.9018  2021-12-11
         [CHANGES]
         * Depends on ExtUtils::CBuilder for Perl 5.8
